src/App.css
/* ... */
.banner-remove-button {
  width: 1rem;
  position: absolute;
  top: 5px;
  right: 5px;
  background: rgba(255, 0, 0, 0.8);
  color: #fff;
  border: none;
  border-radius: 50%;
  cursor: pointer;
}

.banner-submit-button {
  padding: 10px;
  background-color: #007bff;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.banner-submit-button:hover {
  background-color: #0056b3;
}

/* //////////////////////// Order detail page //////////////// */
.orderdetail-container {
  padding: 20px;
  background-color: #f9f9f9;
}

.orderdetail-title {
  font-size: 24px;
  margin-bottom: 10px;
}

.orderdetail-count {
  font-size: 18px;
  margin-bottom: 20px;
}

.orderdetail-products {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

.orderdetail-product {
  background-color: white;
  border: 1px solid #ddd;
  border-radius: 5px;
  padding: 15px;
  width: calc(33.333% - 20px); /* Adjust the width as needed */
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.orderdetail-image {
  width: 100%;
  height: auto;
  border-bottom: 1px solid #ddd;
  margin-bottom: 10px;
}

.orderdetail-name {
  font-size: 20px;
  margin-bottom: 10px;
}

.orderdetail-quantity,
.orderdetail-category {
  font-size: 16px;
}

@media (max-width: 1200px) {
  .card-single {
    flex: 1 1 calc(50% - 20px);
  }
}

/* Responsive styling */
@media (max-width: 768px) {
  .center-logo {
    margin-top: 2rem;
  }
  .header-content {
    flex-direction: column;
    align-items: center;
  }
  .auth-buttons {
    margin-top: 10px;
    margin-right: 0;
  }

  .cart {
    margin-top: 10px;
  }
  .home {
    margin-top: 7.5rem;
  }
  .home .carousel-inner {
    height: 58vh;
  }
  .home .carousel-item img {
    height: 58vh;
  }
  /* .card-section{
    flex-direction: column;
    height: 120vh;
    justify-content: start;
    /* align-items: start; */
  /* } */
  .card-single {
    height: 23vh;
    margin-bottom: 1rem;
  }
  */ .card-single {
    /* flex: 1 1 calc(25% - 20px); */
    flex-direction: column;
  }
  .signup-page {
    margin-top: 13rem;
  }
  .card-container {
    flex-direction: column;
    align-items: center;
  }

  .product-card {
    width: 80%;
    margin-bottom: 20px;
  }
  .header-container {
    flex-direction: column;
  }
  .product-main {
    flex-direction: column;
    align-items: center;
  }

  .product-details {
    text-align: center;
  }

  .product-thumbnails {
    justify-content: center;
  }

  .product-item {
    flex: 1 0 48%; /* Adjust this value as needed for spacing */
  }
  .similar-products-price {
    width: auto;
  }
  .contact-info {
    flex-direction: column;
    align-items: center;
  }

  .contact-info div {
    margin-bottom: 1rem;
  }
  .shoppingcart-left,
  .shoppingcart-right {
    width: 100%;
  }

  .shoppingcart-container {
    flex-direction: column;
  }

  .shoppingcart-item {
    flex-direction: column;
    align-items: center;
  }

  .shoppingcart-item img {
    margin-bottom: 10px;
  }

  .shoppingcart-item-quantity {
    margin-top: 10px;
  }
  .category-container {
    margin-left: 0;
  }
}

@media (max-width: 500px) {
  .home .carousel-inner {
    height: 65vh;
  }
  .home .carousel-item img {
    height: 65vh;
  }
  .card-group {
    flex-direction: column;
  }
  .product-item {
    max-width: 100%;
  }
  /* .card{height: 50vh;} */
}

@media (max-width: 480px) {
  .product-item {
    flex: 1 0 100%; /* Full width on small screens */
  }

  .product-main {
    flex-direction: column;
    align-items: center;
  }

  .product-details {
    width: 100%;
    margin: 0;
    text-align: center; /* Center text on small screens */
  }
}

@media (max-width: 340px) {
  .home {
    margin-top: 15rem;
  }
  .home .carousel-inner {
    height: 38vh;
  }
  .home .carousel-item img {
    height: 38vh;
  }
}

/* Wishlist button hover effects */
.wishlist-btn:hover {
  background-color: #ffa0a0 !important;
  transform: translateY(-2px);
  transition: all 0.3s ease;
}

.wishlist-btn {
  transition: all 0.3s ease;
}

/* /////////////////// admin                 */
.navbar-dark .nav-link {
  color: white !important;
}
.navbar-toggler {
  color: white !important;
}

